2005-01-09  Mark Wielaard  <mark@klomp.org>

	* native/jni/java-io/java_io_VMFile.c
	(Java_java_io_VMFile_create): Call JCL_free_cstring() when done with
	string.
	* native/jni/java-io/javaio.c
	(_javaio_open_read): Likewise.
	(_javaio_open_readwrite): Likewise.
	* native/jni/java-lang/java_lang_VMSystem.c
	(Java_java_lang_VMSystem_getenv): Likewise.
	* native/jni/java-nio/gnu_java_nio_channels_FileChannelImpl.c
	(Java_gnu_java_nio_channels_FileChannelImpl_open): Likewise.

2005-01-09  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Update version to 0.13+cvs.

2005-01-09  Mark Wielaard  <mark@klomp.org>

	* acinclude.m4 (CLASSPATH_WITH_GJDOC): Renamed from
	CLASSPATH_ENABLE_GJDOC. Can now take argument to use as gjdoc program.
	Doesn't depend on xml tools.
	* configure.ac: Use CLASSPATH_WITH_GJDOC.
	* INSTALL: Mention --with-gjdoc option.
	* NEWS: Add --with-gjdoc addition.
	* doc/api/Makefile.am (EXTRA_DIST): Removed.
	(sourcepath): New variable.
	(htmllist): Removed.
	(core): Removed.
	(packages): Removed.
	(date): Removed.
	(clean): Also remove create_html file.
	(create_html): Rewritten.
	* doc/api/classpath-copyright.xml: Removed.

2005-01-09  Patrik Reali  <reali@acm.org>

	* doc/www.gnu.org/newsitems.txt doc/www.gnu.org/announce/20050107.wml 
	doc/www.gnu.org/downloads/downloads.wml: classpath 0.13 release news

2005-01-08  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* java/nio/charset/Charset.java (providers):
	New method to make an array of CharsetProviders defined in
	META-INF/services/java.nio.charset.spi.CharsetProvider.
	(charsetForName, availableCharsets): Use the
	new method providers().

2005-01-08  Michael Koch  <konqueror@gmx.de>

	* java/util/SimpleTimeZone.java (checkRule):
	Throw IllegalArgumentException on invalid month values.

2005-01-08  Michael Koch  <konqueror@gmx.de>

	* gnu/java/net/protocol/http/HTTPConnection.java
	(newRequest): Use "/" as path if no path given in URL.

2005-01-08  Michael Koch  <konqueror@gmx.de>
