@@ -178,7 +178,7 @@ public class AlgorithmParameters
     
     Provider p = Security.getProvider(provider);
     if (p == null)
-      throw new NoSuchProviderException();
+      throw new NoSuchProviderException(provider);
 
     return getInstance(algorithm, p);
   }
