@@ -163,7 +163,7 @@ public class KeyFactory
 
     Provider p = Security.getProvider(provider);
     if (p == null)
-      throw new NoSuchProviderException();
+      throw new NoSuchProviderException(provider);
 
     return getInstance(algorithm, p);
   }
