@@ -164,7 +164,7 @@ public class KeyStore
 
     Provider p = Security.getProvider(provider);
     if (p == null)
-      throw new NoSuchProviderException();
+      throw new NoSuchProviderException(provider);
 
     return getInstance(type, p);
   }
