@@ -218,7 +218,7 @@ public class SecureRandom extends Random
 
     Provider p = Security.getProvider(provider);
     if (p == null)
-      throw new NoSuchProviderException();
+      throw new NoSuchProviderException(provider);
     
     return getInstance(algorithm, p);
   }
