@@ -1,5 +1,15 @@
 2005-01-09  Mark Wielaard  <mark@klomp.org>
 
+	* java/security/AlgorithmParameterGenerator.java (getInstance):
+	Mention provider when throwing NoSuchProviderException.
+	* java/security/AlgorithmParameters.java (getInstance): Likewise.
+	* java/security/KeyFactory.java (getInstance): Likewise.
+	* java/security/KeyStore.java (getInstance): Likewise.
+	* java/security/SecureRandom.java (getInstance): Likewise.
+	* java/security/cert/CertificateFactory.java (getInstance): Likewise.
+
+2005-01-09  Mark Wielaard  <mark@klomp.org>
+
 	* native/jni/java-io/java_io_VMFile.c
 	(Java_java_io_VMFile_create): Call JCL_free_cstring() when done with
 	string.
